--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Hello Wilder !</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="icon" href="./assets/images/favicon.ico" />
+    <link rel="icon" href="./assets/images/favicon.svg" />
   </head>
   <body>
     <h1>Hello Wilder !</h1>
